--- a/package.json
+++ b/package.json
@@ -1,10 +1,9 @@
 {
-  "name": "rmmz-babel-plugin-archetype",
+  "name": "comuns-pixi-filters",
   "version": "1.0.0",
-  "description": "RPG Maker MZ Babel Plugin Archetype",
-  "namespace": "Comuns.Babel.Archetype",
+  "description": "RPG Maker MZ Pixi Filters",
+  "namespace": "Comuns.Pixi.Filters",
   "scripts": {
-    "prebuild": "mz-mtdt -i ./plugin-metadata.yaml -o dist/annotations.js",
     "build": "rollup -c",
     "test": "jasmine"
   },
@@ -16,7 +15,6 @@
   "devDependencies": {
     "@babel/core": "^7.11.4",
     "@babel/preset-env": "^7.11.0",
-    "@comuns-rpgmaker/plugin-metadata": "^0.2.1",
     "@rollup/plugin-babel": "^5.2.0",
     "eslint": "^7.7.0",
     "jasmine": "^3.6.1",
